Implement Rock Paper Scissors
I forgot to do git commits during the process. I'll work on getting
better with it. I really need to start using the pomodoro method, and
if I get to a timer checkpoint and haven't done a commit, then I'll
use that as an opportunity to do so.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="rock-paper-scissors.css">
     <script src="rock-paper-scissors.js"></script>
 </head>
-<body onload="console.log('Add js to page method 3: Hello World!');">
+<!-- <body onload="console.log('Add js to page method 3: Hello World!');"> -->
+<body>
     <header>
         <h1>PROJECT: Rock Paper Scissors</h1>
         <p>Let's play a game.</p>
@@ -16,7 +17,7 @@
 </body>
 
 <script>
-    console.log("Add js to page method 2: Hello World!");
+    // console.log("Add js to page method 2: Hello World!");
 </script>
 
 </html>
