--- a/src/index.html
+++ b/src/index.html
@@ -1,67 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Foundations > JavaScript Basics > Project: Rock Paper Scissors</title>
-    <link rel="stylesheet" href="rock-paper-scissors.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Foundations > JavaScript Basics > Project: Rock Paper Scissors -->
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="rock-paper-scissors.css" />
     <script src="rock-paper-scissors.js" defer></script>
-</head>
-<!-- <body onload="console.log('Add js to page method 3: Hello World!');"> -->
-<body>
+  </head>
+  <!-- <body onload="console.log('Add js to page method 3: Hello World!');"> -->
+  <body>
     <header>
-        <h1>PROJECT: Rock Paper Scissors</h1>
+      <h1>Rock Paper Scissors</h1>
     </header>
 
     <section id="game">
-        
-        <div id="scoreboard">
-            <h2>Scores</h2>
+      <section id="scoreboard">
+        <div id="team">
+          <div class="score">
+            <label for="score-player">player</label>
+            <h3 id="score-player"></h3>
+          </div>
 
-            <div id="scores">
+          <div class="score">
+            <label for="score-computer">computer</label>
+            <h3 id="score-computer"></h3>
+          </div>
 
-                <div class="score">
-                    <label for="score-player">player</label>
-                    <h3 id="score-player"></h3>    
-                </div>
-
-                <div class="score">
-                    <label for="score-computer">computer</label>
-                    <h3 id="score-computer"></h3>
-                </div>
-
-                <div class="score">
-                    <label for="score-draw">draw</label>
-                    <h3 id="score-draw"></h3>
-                </div>
-                
-            </div>
+          <div class="score">
+            <label for="score-draw">draw</label>
+            <h3 id="score-draw"></h3>
+          </div>
         </div>
+      </section>
 
-        <div class="buttons">
-            <div class="button">
-                <input type="image" src="rock_small.png" id="rock" class="rps-button">
-                <h3>Rock</h3>
-            </div>
-            <div class="button">
-                <input type="image" src="paper_small.png" id="paper" class="rps-button">
-                <h3>Paper</h3>
-            </div>
-            <div class="button">
-                <input type="image" src="scissors_small.png" id="scissors" class="rps-button">
-                <h3>Scissors</h3>
-            </div>
+      <section class="choice-container">
+        <div class="button">
+          <input
+            type="image"
+            src="rock_small.png"
+            id="rock"
+            class="rps-button"
+            aria-label="Rock"
+          />
+          <h3>Rock</h3>
         </div>
+        <div class="button">
+          <input
+            type="image"
+            src="paper_small.png"
+            id="paper"
+            class="rps-button"
+            aria-label="Paper"
+          />
+          <h3>Paper</h3>
+        </div>
+        <div class="button">
+          <input
+            type="image"
+            src="scissors_small.png"
+            id="scissors"
+            class="rps-button"
+            aria-label="Scissors"
+          />
+          <h3>Scissors</h3>
+        </div>
+      </section>
 
-        <p id="round-result"></p>
+      <p id="round-result"></p>
 
-        <p id="game-result"></p>
+      <p id="game-result"></p>
     </section>
+  </body>
 
-
-</body>
-
-<script>
+  <script>
     // console.log("Add js to page method 2: Hello World!");
-</script>
-
+  </script>
 </html>
