Accessibility: Changed heading levels

--- a/src/index.html
+++ b/src/index.html
@@ -20,17 +20,17 @@
         <div id="team">
           <div class="score">
             <label for="score-player">player</label>
-            <h3 id="score-player"></h3>
+            <h2 id="score-player"></h2>
           </div>
 
           <div class="score">
             <label for="score-computer">computer</label>
-            <h3 id="score-computer"></h3>
+            <h2 id="score-computer"></h2>
           </div>
 
           <div class="score">
             <label for="score-draw">draw</label>
-            <h3 id="score-draw"></h3>
+            <h2 id="score-draw"></h2>
           </div>
         </div>
       </section>
@@ -44,7 +44,7 @@
             class="rps-button"
             aria-label="Rock"
           />
-          <h3>Rock</h3>
+          <h2>Rock</h2>
         </div>
         <div class="button">
           <input
@@ -54,7 +54,7 @@
             class="rps-button"
             aria-label="Paper"
           />
-          <h3>Paper</h3>
+          <h2>Paper</h2>
         </div>
         <div class="button">
           <input
@@ -64,12 +64,14 @@
             class="rps-button"
             aria-label="Scissors"
           />
-          <h3>Scissors</h3>
+          <h2>Scissors</h2>
         </div>
       </section>
 
+      <!-- For accessibility, This needs to become a modal -->
       <p id="round-result"></p>
 
+      <!-- For accessibility, This needs to become a modal -->
       <p id="game-result"></p>
     </section>
   </body>
