--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         </div>
       </section>
 
-      <section class="choice-container">
+      <main class="choice-container">
         <div class="button">
           <input
             type="image"
@@ -44,7 +44,6 @@
             class="rps-button"
             aria-label="Rock"
           />
-          <h2>Rock</h2>
         </div>
         <div class="button">
           <input
@@ -54,7 +53,6 @@
             class="rps-button"
             aria-label="Paper"
           />
-          <h2>Paper</h2>
         </div>
         <div class="button">
           <input
@@ -64,9 +62,8 @@
             class="rps-button"
             aria-label="Scissors"
           />
-          <h2>Scissors</h2>
         </div>
-      </section>
+      </main>
 
       <!-- For accessibility, This needs to become a modal -->
       <p id="round-result"></p>
