Adjust touch css class

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
       </main>
 
       <!-- For accessibility, This needs to become a modal -->
-      <p id="round-result"></p>
+      <aside id="round-result"></aside>
 
       <!-- For accessibility, This needs to become a modal -->
       <p id="game-result"></p>
