Place p element inside aside

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,9 @@
       </main>
 
       <!-- For accessibility, This needs to become a modal -->
-      <aside id="round-result"></aside>
+      <aside>
+        <p id="round-result"></p>
+      </aside>
 
       <!-- For accessibility, This needs to become a modal -->
       <p id="game-result"></p>
