Change aside to span
This improves the screen reader experience. (In Orca)

--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,9 @@
         </div>
       </main>
 
-      <aside id="round-result" tabindex="0"></aside>
+      <span id="round-result" aria-label="round result" tabindex="0"></span>
 
-      <aside id="game-result" tabindex="0"></aside>
+      <span id="game-result" aria-label="game result" tabindex="0"></span>
     </section>
   </body>
 
