--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,19 @@
         </div>
       </main>
 
-      <span id="round-result" aria-label="round result" tabindex="0"></span>
+      <span
+        id="round-result"
+        aria-live="polite"
+        aria-label="round result"
+        tabindex="0"
+      ></span>
 
-      <span id="game-result" aria-label="game result" tabindex="0"></span>
+      <span
+        id="game-result"
+        aria-live="polite"
+        aria-label="game result"
+        tabindex="0"
+      ></span>
     </section>
   </body>
 
